--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to My Webpage</h1>
-    <p>This is a simple HTML page with 10 lines of code.</p>
+    <p>This is a simple practice</p>
 </body>
 </html>
