--- a/gc.html
+++ b/gc.html
@@ -6,5 +6,10 @@
 <body>
     <h1>Welcome to My Webpage</h1>
     <p>This is a simple practice</p>
+
+    <p>        This is website creation      </p>
+    <p>        This is website creation      </p>
+    <p>        This is website creation      </p>
+    <p>        This is website creation      </p>
 </body>
 </html>
